; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_aggregate_lquantize.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_aggregate_lquantize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64, i64)* @dtrace_aggregate_lquantize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dtrace_aggregate_lquantize(i64* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %13 = load i64*, i64** %4, align 8
  %14 = getelementptr inbounds i64, i64* %13, i32 1
  store i64* %14, i64** %4, align 8
  %15 = load i64, i64* %13, align 8
  store i64 %15, i64* %7, align 8
  %16 = load i64, i64* %7, align 8
  %17 = call i64 @DTRACE_LQUANTIZE_BASE(i64 %16)
  store i64 %17, i64* %8, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i64 @DTRACE_LQUANTIZE_STEP(i64 %18)
  store i64 %19, i64* %9, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i64 @DTRACE_LQUANTIZE_LEVELS(i64 %20)
  store i64 %21, i64* %10, align 8
  %22 = load i64, i64* %5, align 8
  store i64 %22, i64* %11, align 8
  %23 = load i64, i64* %9, align 8
  %24 = icmp ne i64 %23, 0
  %25 = zext i1 %24 to i32
  %26 = call i32 @ASSERT(i32 %25)
  %27 = load i64, i64* %10, align 8
  %28 = icmp ne i64 %27, 0
  %29 = zext i1 %28 to i32
  %30 = call i32 @ASSERT(i32 %29)
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* %8, align 8
  %33 = icmp slt i64 %31, %32
  br i1 %33, label %34, label %40

34:                                               ; preds = %3
  %35 = load i64, i64* %6, align 8
  %36 = load i64*, i64** %4, align 8
  %37 = getelementptr inbounds i64, i64* %36, i64 0
  %38 = load i64, i64* %37, align 8
  %39 = add nsw i64 %38, %35
  store i64 %39, i64* %37, align 8
  br label %65

40:                                               ; preds = %3
  %41 = load i64, i64* %11, align 8
  %42 = load i64, i64* %8, align 8
  %43 = sub nsw i64 %41, %42
  %44 = load i64, i64* %9, align 8
  %45 = sdiv i64 %43, %44
  store i64 %45, i64* %12, align 8
  %46 = load i64, i64* %12, align 8
  %47 = load i64, i64* %10, align 8
  %48 = icmp slt i64 %46, %47
  br i1 %48, label %49, label %57

49:                                               ; preds = %40
  %50 = load i64, i64* %6, align 8
  %51 = load i64*, i64** %4, align 8
  %52 = load i64, i64* %12, align 8
  %53 = add nsw i64 %52, 1
  %54 = getelementptr inbounds i64, i64* %51, i64 %53
  %55 = load i64, i64* %54, align 8
  %56 = add nsw i64 %55, %50
  store i64 %56, i64* %54, align 8
  br label %65

57:                                               ; preds = %40
  %58 = load i64, i64* %6, align 8
  %59 = load i64*, i64** %4, align 8
  %60 = load i64, i64* %10, align 8
  %61 = add nsw i64 %60, 1
  %62 = getelementptr inbounds i64, i64* %59, i64 %61
  %63 = load i64, i64* %62, align 8
  %64 = add nsw i64 %63, %58
  store i64 %64, i64* %62, align 8
  br label %65

65:                                               ; preds = %57, %49, %34
  ret void
}

declare dso_local i64 @DTRACE_LQUANTIZE_BASE(i64) #1

declare dso_local i64 @DTRACE_LQUANTIZE_STEP(i64) #1

declare dso_local i64 @DTRACE_LQUANTIZE_LEVELS(i64) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
